tests/paczka1/fuzzy1/25497230.err
Error in line 4: 2Ty3uoc9i S887 66,1
Error in line 9: 2Ty3uoc9i S401 9,12
Error in line 6: 2Ty3uoc9i S401 2,1
Error in line 15: 12dXi621v11 S887 75,6
Error in line 17: orP4FVxJ A985 29,7
Error in line 18: 2Ty3uoc9i S585 76,0
Error in line 24: 12dXi621v11 S401 117,83
Error in line 23: 2Ty3uoc9i A985 36,3
Error in line 26: Bkp A985 14,6
